--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -14,7 +14,7 @@
     No se encontro nada con el término {{ termino }}.
 </div>
 
-<div *ngIf="!hayError" class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
         <table class="table table-hover">
             <thead>
@@ -26,13 +26,15 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>bandera</td>
-                    <td>nombre</td>
-                    <td>poblacion</td>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <td>{{ i + 1}}</td>
                     <td>
-                        <a href="/elsalvador">Ver...</a>
+                        <img [src]="pais.flags.png" alt="pais">
+                    </td>
+                    <td>{{ pais.name.common }}</td>
+                    <td>{{ pais.population | number }}</td>
+                    <td>
+                        <a [routerLink]="['pais', pais.cca3]">Ver...</a>
                     </td>
                 </tr>
             </tbody>
