--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,25 @@
-<p>por-capital works!</p>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Capital</h2>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <app-pais-input 
+                (onEnter)="buscar($event)" 
+                (onDebounce)="sugerencias($event)"
+                placeholder = "Buscar capital..."
+                ></app-pais-input>
+        </div>
+    </div>
+    
+    <hr>
+</div>
+
+<div class="alert alert-danger" *ngIf="hayError">
+    No se encontro nada con el término {{ termino }}.
+</div>
+
+<div *ngIf="paises.length > 0" class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
